# video_downloader

./: .gitignore  .pre-commit.yaml  README.md  constraints.txt  pyproject.toml  requirements.txt
downloader/: __main__.py  cli.py
downloader/app/: __init__.py
downloader/app/services/: __init__.py  downloader.py  vk_downloader.py  yt_downloader.py
source/: vk.html
